Se agregan actualizacion de listado de precios por categoria